# RuNo

./: .gitignore  .taurignore  LICENSE  README.md  index.test.html  oracle_guide.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.history/src/: App_20241225012516.tsx  App_20241226000227.tsx  App_20241226000715.tsx  App_20241226000724.tsx  App_20241226000805.tsx  App_20241226001929.tsx  App_20241226024230.tsx  App_20241226024347.tsx  App_20241226025211.tsx
.history/src-tauri/: tauri.conf_20241219025314.json  tauri.conf_20241223223118.json  tauri.conf_20241223223421.json
.history/src/components/: Dropdowns_20241221224826.tsx  Dropdowns_20241221225737.tsx  Dropdowns_20241222051344.tsx  Dropdowns_20241222052054.tsx  Dropdowns_20241222053340.tsx  Dropdowns_20241222053725.tsx  Dropdowns_20241222054535.tsx  Dropdowns_20241222055244.tsx  Dropdowns_20241222060005.tsx  Dropdowns_20241222152624.tsx  Dropdowns_20241222153252.tsx  Dropdowns_20241222165036.tsx  Dropdowns_20241223051412.tsx  Dropdowns_20241225005203.tsx  Dropdowns_20241225013619.tsx  Dropdowns_20241225014626.tsx  Dropdowns_20241225020319.tsx  Dropdowns_20241225020515.tsx  Dropdowns_20241225020732.tsx  Dropdowns_20241225021001.tsx  Dropdowns_20241225022725.tsx  Dropdowns_20241225030642.tsx  Dropdowns_20241226002627.tsx  Dropdowns_20241226004254.tsx  Dropdowns_20241228035611.tsx  Dropdowns_20241228040131.tsx  Dropdowns_20241228200534.tsx  Dropdowns_20250101214244.tsx  Dropdowns_20250101223231.tsx  Dropdowns_20250101225316.tsx  Dropdowns_20250101230325.tsx  Dropdowns_20250101230341.tsx  Dropdowns_20250101230357.tsx  Dropdowns_20250101230843.tsx  Dropdowns_20250101231024.tsx  Dropdowns_20250105172816.tsx  Dropdowns_20250105173041.tsx  Dropdowns_20250105173136.tsx  Dropdowns_20250106011026.tsx  Dropdowns_20250106011531.tsx  (+15 more)
.history/src/state/: load_20241222053820.ts
src/: App.scss  App.tsx  global.d.ts  helper.ts  main.tsx  styles.css  styles.scss  types.ts  vars.css
src-tauri/: Cargo.toml  _tauri.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: .managed.json  meta.json
src-tauri/src/: api.rs  command.rs  database.rs  error.rs  license.rs  main.rs  parser.pest  sql.rs  trial.rs
src-tauri/src/command/: applicationdialogs.rs  applicationdirs.rs  documents.rs  html.rs  utils.rs
src/components/: Components.scss  Dropdowns.tsx  Editor.tsx  Entries.tsx  Header.tsx  Navigation.tsx  Tabs.tsx  box.tsx  editor.scss
src/state/: connection.ts  editor.ts  fileTypes.ts  formula.ts  load.ts  table.ts
(+154 files in other folders)
