[package]
name = "testing"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-ask", "path-all", "fs-write-file", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
msgbox = "0.7.0"
tantivy = "0.21.1"
pest = "2.7.7"
pest_derive = "2.7.7"
regex = "1.10.3"
indicatif = "0.17.8"
once_cell = "1.19.0"
scraper = "0.18.1"
html5ever = "0.26"
markup5ever = "0.11.0"
markup5ever_rcdom = "0.2.0"
round = "0.1.2"
chrono = "0.4.35"
dateparser = "0.2.1"
try-catch = "0.2.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
