[package]
name = "runo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "runo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }


[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
zstd-sys = "=2.0.9"
tantivy = "0.21.1"
pest = "2.7.7"
pest_derive = "2.7.7"
regex = "1.10.3"
indicatif = "0.17.8"
once_cell = "1.19.0"
scraper = "0.18.1"
html5ever = "0.26"
markup5ever = "0.11.0"
markup5ever_rcdom = "0.2.0"
round = "0.1.2"
dateparser = "0.2.1"
try-catch = "0.2.2"
uuid = "1.8.0"
chrono = "0.4.38"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8.5"
tauri-plugin-dialog = "2"
dirs = "5.0.1"
tauri-plugin-fs = "2"
sqlx = { version = "0.8.3", features = ["sqlite", "mysql", "postgres", "runtime-tokio", "tls-native-tls"] }
tokio = { version = "1", features = ["full"] }
oracle = "0.6.3"
hostname = "0.3" 
hex = "0.4"
dirs-next = "2"
